# Python_Practice

src/: demo.py  list.py
src/Day 3/: abs.py  acfunc.py  classob.py  exce.py  read.py  write.py
src/Day2/: evenodd.py  largest.py  leap.py
src/Day4/: decorater.py  generators.py  lambda.py
src/Day6/: unit.py
src/cookiepy/cookiecutter-employee-template/: cookiecutter.json
src/cookiepy/cookiecutter-employee-template/{{cookiecutter.project_name}}/: README.md  requirements.txt  tox.ini
src/cookiepy/cookiecutter-employee-template/{{cookiecutter.project_name}}/src/: models.py
src/cookiepy/cookiecutter-employee-template/{{cookiecutter.project_name}}/tests/: test_models.py
src/cookiepy/sanorbs/src/: main.py
src/day5/: dec.py  logg.py  pytest.py
src/day7/: cookiecutter.json
src/myapp/: pyproject.toml
src/myapp/src/myapp/: __init__.py  main.py
src/myapp/src/myapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/myutils/: Readme.md  pyproject.toml
src/myutils/src/myutils.egg-info/: PKG-INFO  SOURCES.txt
src/myutils/tests/: test_core.py
