[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "myapp"
version = "0.1.0"
description = "Demo app that uses myutils wheel"
requires-python = ">=3.10"
authors = [
  { name = "Sandeep", email = "sandeep@example.com" }
]

# We’ll install myutils manually from the local wheel,
# but list it here for clarity (version-wise).
dependencies = [
  "myutils>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]